Add conditional rendering for side menu and login component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,10 @@
 
-<app-side-menu/>
 <!-- <app-data-display/>
 
 <router-outlet /> -->
+@if (isLoggedIn) {
+    <app-side-menu />
+
+} @else {
+    <app-login />
+}
