--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,15 @@
 
-<!-- <app-data-display/>
+<!-- <app-data-display/> -->
 
-<router-outlet /> -->
+
 @if (isLoggedIn) {
     <app-side-menu />
-
+    <div class="app-comp-container">
+        <router-outlet />
+    </div>
 } @else {
     <app-login />
 }
+
+
+
