--- a/frontend/src/app/components/side-menu/side-menu.component.html
+++ b/frontend/src/app/components/side-menu/side-menu.component.html
@@ -15,9 +15,9 @@
             </div>
         </mat-sidenav>
 
-        <mat-sidenav-content class="padded">
+        <!-- <mat-sidenav-content class="padded">
             <router-outlet></router-outlet>
-        </mat-sidenav-content>
+        </mat-sidenav-content> -->
 
     </mat-sidenav-container>
 </div>
