--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-    background-image: url("../assets/bg.jpg");
+    /* background-image: url("../assets/bg.jpg"); */
 }
 
 .app-comp-container{
